--- a/Sahaayak/package.json
+++ b/Sahaayak/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0"
